[package]
name = "nutp"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["UART", "no_std"]
repository = "https://github.com/Cethannel/nutp"
description = "The New UART Transfer Protocol"
readme = "README"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.2"
