[package]
name = "nutp"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["UART", "no_std"]
repository = "https://github.com/Cethannel/nutp"
description = "The New UART Transfer Protocol"
readme = "README"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.7.16", features = ["ufmt-write"] }
